# quicktle

./: CMakeLists.txt  Changelog  README.md  quicktle.spec.in
samples/sample1/: CMakeLists.txt
samples/sample2/: CMakeLists.txt
samples/sample3/: CMakeLists.txt
samples/sample4/: CMakeLists.txt
src/: func.cpp
test/: CMakeLists.txt
